1) introduce BinData 2) add pre-commit tasks 3) fix spotless config